--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "actions-on-google": "^2.12.0",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.6.0",
+    "dialogflow-fulfillment": "^0.6.1"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
