--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,13 @@
   },
   "dependencies": {
     "actions-on-google": "^2.12.0",
+    "dialogflow-fulfillment": "^0.6.1",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.6.0",
-    "dialogflow-fulfillment": "^0.6.1"
+    "firebase-functions": "^3.13.1"
   },
   "devDependencies": {
-    "eslint": "^5.12.0",
+    "eslint": "^5.16.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-promise": "^4.0.1",
     "firebase-functions-test": "^0.1.6"
   },
