--- a/public/package.json
+++ b/public/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@mdi/font": "^3.6.95",
@@ -15,6 +16,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.15",
     "core-js": "^3.6.4",
+    "eslint-config-google": "^0.14.0",
     "eslint-loader": "^2.1.2",
     "firebase": "^7.11.0",
     "moment": "^2.24.0",
@@ -27,6 +29,7 @@
     "vue-json-excel": "^0.2.98",
     "vue-json-to-csv": "^1.1.7",
     "vue-router": "^3.1.5",
+    "vuejs-datepicker": "^1.6.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
